<resources>
    <string name="app_name">TNK115 - Laboration 1</string>
    <string name="header">Collected values</string>
    <string name="lat_name">Latitude:</string>
    <string name="lon_name">Longitude:</string>
    <string name="speed_name">Speed:</string>
    <string name="heading_name">Heading:</string>
    <string name="accuracy_name">Accuracy:</string>
    <string name="no_info">Unknown</string>
    <string name="start_gps">Start GPS</string>
    <string name="stop_gps">Stop GPS</string>
    <string name="go_to_map">Map</string>
    <string name="title_activity_mapactivity">Map</string>
    <string name="mode_text">Mode</string>
    <string name="hour_text">Hour interval</string>
    <string name="day_text">Day interval</string>
    <string name="opacity_text">Opacity</string>
    
    
    
    
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>