<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/liu_blue"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/map_buttonv21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200sp"
        android:layout_marginTop="200sp"
        android:backgroundTint="@color/liu_gray"
        android:text="@string/go_to_map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="startMapActivity"/>

    <Button
        android:id="@+id/gps_buttonv21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56sp"
        android:layout_marginTop="200sp"
        android:backgroundTint="@color/liu_gray"
        android:text="@string/start_gps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="toggleGps"/>

    <ImageView
        android:id="@+id/logo_21"
        android:layout_width="297dp"
        android:layout_height="121dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45sp"
        android:gravity="center"
        android:text="@string/header"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/latitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62sp"
        android:layout_marginStart="62sp"
        android:layout_marginTop="80sp"
        android:text="@string/lat_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/longitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62sp"
        android:layout_marginStart="62sp"
        android:layout_marginTop="100sp"
        android:text="@string/lon_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/speed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62sp"
        android:layout_marginStart="62sp"
        android:layout_marginTop="120sp"
        android:text="@string/speed_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62sp"
        android:layout_marginStart="62sp"
        android:layout_marginTop="140sp"
        android:text="@string/heading_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accuracy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62sp"
        android:layout_marginStart="62sp"
        android:layout_marginTop="160sp"
        android:text="@string/accuracy_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/latitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150sp"
        android:layout_marginStart="150sp"
        android:layout_marginTop="80sp"
        android:text="@string/no_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/longitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150sp"
        android:layout_marginStart="150sp"
        android:layout_marginTop="100sp"
        android:text="@string/no_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/speed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150sp"
        android:layout_marginStart="150sp"
        android:layout_marginTop="120sp"
        android:text="@string/no_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heading_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150sp"
        android:layout_marginStart="150sp"
        android:layout_marginTop="140sp"
        android:text="@string/no_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accuracy_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150sp"
        android:layout_marginStart="150sp"
        android:layout_marginTop="160sp"
        android:text="@string/no_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>