<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/time_bar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="324dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="508dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/day_bar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="324dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="576dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/mode_spinner"
        android:layout_width="115dp"
        android:layout_height="37dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="436dp"

        android:entries="@array/types"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hour_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="484dp"
        android:text="@string/hour_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/opacity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="620dp"
        android:text="@string/opacity_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/day_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="552dp"
        android:text="@string/day_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mode_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="448dp"
        android:text="@string/mode_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/opacity_bar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="324dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="644dp"
        android:max="100"
        android:progress="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="409dp"
        android:layout_height="423dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>